Arranged the technology section

--- a/index.html
+++ b/index.html
@@ -65,45 +65,53 @@
 
 	<div id="technologies">
 
-		<div id="frontend">
+		<h2>Technologies</h2>
 
-			<h2>
+		<div id="tech-wrapper">
+			<div id="frontend">
 
-				Frontend
-			</h2>
+				<h3>
 
-			<p>
+					Frontend
+				</h3>
 
-				I can create intricate UI using vanilla js with or without web components.
-				I am relatively new to js frameworks but have a good grasp of reack.
+				<p>
 
-			</p>
+					I can create intricate UI using vanilla js with or without web components.
+					I am relatively new to js frameworks but have a good grasp of reack.
+
+				</p>
+			</div>
+
+			<div id="backend">
+
+				<h3>
+
+					Backend
+				</h3>
+
+				<p>
+					I have used both PHP and Node.js (with express) as server side languages.
+					In terms of databases I have mainly worked with MySQL but have some experience with MongoDB.
+
+
+				</p>
+
+			</div>
 		</div>
 
-		<div id="backend">
+		<div id="technologies-button-wrapper">
+			<a href="#projects" id="checkout-projects">
 
-			<h2>
+				<span>
+					Checkout Projects
 
-				Backend
-			</h2>
+				</span>
 
-			<p>
-				I have used both PHP and Node.js (with express) as server side languages.
-				In terms of databases I have mainly worked with MySQL but have some experience with MongoDB.
+			</a>
 
-
-			</p>
 
 		</div>
-
-		<a href="#projects" id="checkout-projects">
-
-			<span>
-				Checkout Projects
-
-			</span>
-
-		</a>
 
 	</div>
 
