--- a/index.html
+++ b/index.html
@@ -7,27 +7,6 @@
 	<link rel="stylesheet" href="styles.css">
 	<script src="components/project.js"></script>
 	<style>
-		h3 {
-			text-decoration: underline;
-
-		}
-
-		#projects-wrapper {
-			display: grid;
-			grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
-			font-size: 23px;
-			place-items: center;
-			grid-gap: 10px;
-
-		}
-
-		#projects {}
-
-		app-project {
-
-			width: max-content;
-		}
-
 		.project {}
 
 		#project-1 {}
@@ -131,13 +110,15 @@
 
 
 
-			<app-project color="#fe076e" project-number="Project 1" live-site="https://avodatova.co.il" img-url="images/avodatova.png" project-name="Job Search Platform" frontend="Vannila js" backend="PHP" description=" This is a job search platform. It allows users to register as job seekers or as recruiters. Job seekers can upload their cv, search for jobs and apply with one click. Recruiters can publish ads, track the number of applicants and download their cvs."></app-project>
+			<app-project color="#fe076e" project-number="Project 1" live-site="https://neteacher.co.il" img-url="images/neteacher.png" project-name="Online Learning Platform" frontend="Vannila js" backend="PHP" description="This is a website built for my math tutoring business.
+			The website allows users to purchase online math courses."></app-project>
 
-			<app-project color="#fe076e" project-number="Project 1" live-site="https://avodatova.co.il" img-url="images/avodatova.png" project-name="Job Search Platform" frontend="Vannila js" backend="PHP" description=" This is a job search platform. It allows users to register as job seekers or as recruiters. Job seekers can upload their cv, search for jobs and apply with one click. Recruiters can publish ads, track the number of applicants and download their cvs."></app-project>
+			<app-project color="#ff4d06" project-number="Project 2" live-site="https://avodatova.co.il" img-url="images/avodatova.png" project-name="Job Search Platform" frontend="Vannila js" backend="PHP" description=" This is a job search platform. It allows users to register as job seekers or as recruiters. Job seekers can upload their cv, search for jobs and apply with one click. Recruiters can publish ads, track the number of applicants and download their cvs."></app-project>
 
-			<app-project color="#fe076e" project-number="Project 1" live-site="https://avodatova.co.il" img-url="images/avodatova.png" project-name="Job Search Platform" frontend="Vannila js" backend="PHP" description=" This is a job search platform. It allows users to register as job seekers or as recruiters. Job seekers can upload their cv, search for jobs and apply with one click. Recruiters can publish ads, track the number of applicants and download their cvs."></app-project>
+			<app-project color="#008080" project-number="Project 3" live-site="https://moominmemorygame.herokuapp.com" img-url="images/moomin.png" project-name="Moomin Memory Game" frontend="Vannila js" backend="Node.js" description=" 	This is a moomin themed memory game.							The game has three modes: single player, two players on the same machine and two players on remote machines."></app-project>
 
-			<app-project color="#fe076e" project-number="Project 1" live-site="https://avodatova.co.il" img-url="images/avodatova.png" project-name="Job Search Platform" frontend="Vannila js" backend="PHP" description=" This is a job search platform. It allows users to register as job seekers or as recruiters. Job seekers can upload their cv, search for jobs and apply with one click. Recruiters can publish ads, track the number of applicants and download their cvs."></app-project>
+			<app-project color="#082a49" project-number="Project 4" live-site="https://letsstarttalking.herokuapp.com/" img-url="images/letstalk.png" project-name="Video Chat" frontend="Web Components" backend="Node.js" description="This little website allows users to create rooms where they can chat with their friends.
+			Users can either send messages to the entire room or private messages to specific users. Moreover, Video calls are allowed between any two users."></app-project>
 
 		</div>
 
