1) Added the header in the project section 2) Changed images svg->png to prevent problems with fonts.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div id="about-me-text">
 
 			<div>
-				<img src="images/about_me.svg" alt="">
+				<img src="images/about_me.png" alt="">
 
 			</div>
 			<p>
@@ -40,7 +40,7 @@
 
 		<div id="image-container">
 
-			<img src="images/id.svg" alt="">
+			<img src="images/id.png" alt="">
 
 		</div>
 
@@ -101,23 +101,24 @@
 
 	<div id="projects">
 
-		<h2>
-			Projects
 
-		</h2>
+		<div id="projects-header">
+			<img src="images/project_banner.png" alt="">
+
+		</div>
 
 		<div id="projects-wrapper">
 
 
 
-			<app-project color="#fe076e" project-number="Project 1" live-site="https://neteacher.co.il" img-url="images/neteacher.png" project-name="Online Learning Platform" frontend="Vannila js" backend="PHP" description="This is a website built for my math tutoring business.
+			<app-project color="#fe076e" project-number="Project 1" live-site="https://neteacher.co.il" git-url="" img-url="images/neteacher.png" project-name="Online Learning Platform" frontend="Vannila js" backend="PHP" description="This is a website built for my math tutoring business.
 			The website allows users to purchase online math courses."></app-project>
 
-			<app-project color="#ff4d06" project-number="Project 2" live-site="https://avodatova.co.il" img-url="images/avodatova.png" project-name="Job Search Platform" frontend="Vannila js" backend="PHP" description=" This is a job search platform. It allows users to register as job seekers or as recruiters. Job seekers can upload their cv, search for jobs and apply with one click. Recruiters can publish ads, track the number of applicants and download their cvs."></app-project>
+			<app-project color="#ff4d06" project-number="Project 2" live-site="https://avodatova.co.il" git-url="" img-url="images/avodatova.png" project-name="Job Search Platform" frontend="Vannila js" backend="PHP" description=" This is a job search platform. It allows users to register as job seekers or as recruiters. Job seekers can upload their cv, search for jobs and apply with one click. Recruiters can publish ads, track the number of applicants and download their cvs."></app-project>
 
-			<app-project color="#008080" project-number="Project 3" live-site="https://moominmemorygame.herokuapp.com" img-url="images/moomin.png" project-name="Moomin Memory Game" frontend="Vannila js" backend="Node.js" description=" 	This is a moomin themed memory game.							The game has three modes: single player, two players on the same machine and two players on remote machines."></app-project>
+			<app-project color="#008080" project-number="Project 3" live-site="https://moominmemorygame.herokuapp.com" git-url="https://github.com/gadilabi/moomin" img-url="images/moomin.png" project-name="Moomin Memory Game" frontend="Vannila js" backend="Node.js" description=" 	This is a moomin themed memory game.							The game has three modes: single player, two players on the same machine and two players on remote machines."></app-project>
 
-			<app-project color="#082a49" project-number="Project 4" live-site="https://letsstarttalking.herokuapp.com/" img-url="images/letstalk.png" project-name="Video Chat" frontend="Web Components" backend="Node.js" description="This little website allows users to create rooms where they can chat with their friends.
+			<app-project color="#082a49" project-number="Project 4" live-site="https://letsstarttalking.herokuapp.com/" git-url="https://github.com/gadilabi/lets-talk" img-url="images/letstalk.png" project-name="Video Chat" frontend="Web Components" backend="Node.js" description="This little website allows users to create rooms where they can chat with their friends.
 			Users can either send messages to the entire room or private messages to specific users. Moreover, Video calls are allowed between any two users."></app-project>
 
 		</div>
