1) Made website more responsive. A few last touched are needed.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Gad Laviod's Portfolio</title>
 	<link rel="stylesheet" href="styles.css">
 	<script src="components/project.js"></script>
@@ -20,8 +21,8 @@
 
 		<div id="about-me-text">
 
-			<div>
-				<img src="images/about_me.png" alt="">
+			<div id="about-me-header-container">
+				<img id="about-me-header" src="images/about_me.png" alt="">
 
 			</div>
 			<p>
